# zk-shroud-arena

./: .gitignore  CLAUDE.md  LICENSE.md  Makefile  README.md  claude-flow.config.json  test-api.js
.claude/: config.json
memory/: swarm-auto-centralized-1750449135625-zk-integration-results.md
memory/backups/: backup-2025-06-20T19-34-23-531Z.json  backup-2025-06-20T19-36-36-763Z.json  backup-2025-06-20T19-38-49-274Z.json  backup-2025-06-20T19-40-31-875Z.json  backup-2025-06-20T19-54-10-156Z.json  backup-2025-06-20T20-00-05-800Z.json  backup-2025-06-20T20-03-03-380Z.json
memory/data/: entries.json
src/backend/: Cargo.toml
src/backend/params/: vkey.json
src/backend/params/gen_verifier/: Cargo.toml  Verifier.sol
src/backend/params/gen_verifier/src/: main.rs
src/backend/params/vk_to_snarkjs/: Cargo.toml
src/backend/params/vk_to_snarkjs/src/: main.rs
src/backend/src/: keys.rs  main.rs  state.rs
src/backend/src/api/: healthz.rs  mod.rs  prove.rs  verify.rs
src/backend/src/zk/: circuit.rs  fixed_point_decimal.rs  mod.rs  point_2d.rs
src/frontend/: API_CONTROLLER_DEMO.tsx  API_CONTROLLER_IMPLEMENTATION.md  BACKEND_CONFIGURATION.md  DEMO_INSTRUCTIONS.md  DEPLOYMENT.md  SET_BACKEND_URL.md  jest.config.js  next.config.ts  package-lock.json  package.json  vercel.json
src/frontend/docs/: zone-sync-system.md
src/frontend/public/: zk-hack-letter-guide.html
src/frontend/src/__mocks__/: apiController.ts  zkProofService.ts
src/frontend/src/__tests__/: setup.ts  websocket-integration.test.ts
src/frontend/src/__tests__/components/: GameManagerControls.test.tsx  LocationPrivacyControls.test.tsx  (+1 more)
src/frontend/src/app/: globals.css  homepage-enhanced.tsx  layout.tsx  page.original.tsx  page.tsx
src/frontend/src/components/: BackendStatus.tsx  ConnectionStatus.tsx  ErrorBoundary.tsx  GameHUD.tsx  GameLobby.tsx  GameOrchestrator.tsx  GameStats.tsx  LiveProofLogger.tsx  LoadingScreen.tsx  ProofDisplay.tsx  ZKProofIndicator.tsx  ZoneSyncDemo.tsx  ZoneSyncStatus.tsx  index.ts
src/frontend/src/config/: environment.ts
src/frontend/src/contexts/: GameContext.tsx
src/frontend/src/examples/: GameManagerZoneDrawing.tsx  MiningAnimationDemo.tsx
src/frontend/src/hooks/: useAPIController.ts  useGameState.ts  useLocationProof.ts  useRealWorldLocation.ts  useScrollAnimations.ts  useWebSocket.ts  useZoneSync.tsx
src/frontend/src/services/: apiController.ts  geofenceMonitor.ts  h3Service.ts  locationService.ts  phaseManager.ts  soundEffects.ts  websocketService.ts  zkProofService.ts  zoneSyncManager.ts
src/frontend/src/styles/: design-system.md  tron-design-system.css  tron-homepage-implementation.md
src/frontend/src/test-utils/: setup.ts  websocket-polyfill.js
src/frontend/src/types/: gameState.ts  websocket.ts  zkProof.ts
src/specs/: README.md  package-lock.json  package.json  prover.test.ts  service.ts  tsconfig.json  vitest.config.ts
(+71 files in other folders)
