[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["crh", "r1cs"] }
ark-ff = "0.5"
ark-r1cs-std = "0.5"
ark-relations = "0.5"
rand = "0.9.1"
actix-web = "4"
h3o = "0.8.0"
proj = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"