[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
ark-bn254 = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["crh", "r1cs"] }
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-r1cs-std = "0.5"
ark-relations = "0.5"
ark-serialize = "0.5"
ark-std = { version = "0.5", features = ["std"] }
base64 = "0.21"
h3o = "0.8.0"
once_cell = "1.21.3"
proj = "0.30.0"
rand = "0.9.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
