[package]
name = "vk_to_snarkjs"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-serialize = "0.5"
ark-groth16   = "0.5"
ark-bn254     = "0.5"
ark-ff        = "0.5"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
clap          = { version = "4", features = ["derive"] }
anyhow = "1.0.98"
ark-std = "0.5.0"
ark-ec = "0.5.0"
